<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">dapp</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_phone_no2">Phone no.</string>
    <string name="lbl_start">Start</string>
    <string name="lbl_reset">RESET</string>
    <string name="msg_the_ultimate_bu">The Ultimate Bus Tracking App</string>
    <string name="msg_don_t_have_an_a">Don\u2019t have an account ! SignUp</string>
    <string name="lbl_phone_no">Phone No :</string>
    <string name="msg_confirm_passwor">Confirm Password :</string>
    <string name="lbl_upi_id2">UPI Id</string>
    <string name="msg_9284608501185_p">9284608501185@paytm.com</string>
    <string name="lbl_login">Login</string>
    <string name="msg_tap_to_start_or">Tap to start or stop the location</string>
    <string name="msg_email_id_phone">Email Id/ Phone no.</string>
    <string name="lbl_new_password">New Password :</string>
    <string name="lbl_password2">Password</string>
    <string name="lbl_bus_id">Bus ID :</string>
    <string name="lbl_9284608501">9284608501</string>
    <string name="lbl_address2">Address</string>
    <string name="msg_ostwal_empire">OStwal Empire, Boisar</string>
    <string name="lbl_edit">Edit</string>
    <string name="msg_confirm_passwor2">Confirm Password</string>
    <string name="msg_current_passwor2">Current Password</string>
    <string name="lbl_contact">Contact :</string>
    <string name="lbl_arival">Arival :</string>
    <string name="lbl_get_started">Get Started</string>
    <string name="lbl_upi_id">UPI ID :</string>
    <string name="lbl_password">Password :</string>
    <string name="lbl_name">Name :</string>
    <string name="msg_forgot_password">Forgot password ! Reset</string>
    <string name="lbl_new_password2">New Password</string>
    <string name="lbl_arrival">Arrival :</string>
    <string name="lbl_destination">Destination :</string>
    <string name="lbl_boisar">Boisar</string>
    <string name="lbl_name2">Name</string>
    <string name="lbl_address">Address :</string>
    <string name="lbl_rakesh_sharma">Rakesh Sharma</string>
    <string name="lbl_register">Register</string>
    <string name="lbl_destination2">Destination</string>
    <string name="lbl_contact2">Contact</string>
    <string name="lbl_convibus">ConviBus</string>
    <string name="lbl_submit">SUBMIT</string>
    <string name="msg_start_your_jour">Start your journey today !</string>
    <string name="msg_current_passwor">Current Password :</string>
    <string name="lbl_vasai">Vasai</string>
    <string name="lbl_arrival2">Arrival</string>
    <string name="lbl_bus_id2">Bus Id</string>
    <string name="msg_email_id_or_pho">Email Id or Phone no.</string>
    <string name="msg_please_enter_valid_text">Please enter valid text</string>
    <string name="msg_please_enter_valid_mo_nu">Please enter valid mobile number</string>
    <string name="msg_please_enter_valid_pa">Please enter valid password</string>
    <string name="msg_please_enter_valid_nu">Please enter valid number</string>
    <string name="msg_please_enter_valid_phone_nu">Please enter valid phone number</string>
    <string name="msg_this_contact_has_no_phone_nu">This contact has no phone number</string>
    <string name="msg_camera_storage_permission">This Application need permission\n1.Camera permission to capture the image.\n2.Storage Access permission to save the captured image.</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_gallery">Gallery</string>
</resources>
