<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="profileVM" type="com.dapp.app.modules.profile.data.viewmodel.ProfileVM"/>
    </data>
    <FrameLayout android:id="@+id/frameDriversProfil"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylewhite_A700">
        <LinearLayout android:id="@+id/linearColumnconvibus"
            android:layout_gravity="top|start"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_10pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <androidx.appcompat.widget.Toolbar android:gravity="start"
                android:id="@+id/toolbarToolbar"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" app:contentInsetStart="0dp">
                <FrameLayout android:id="@+id/frameStackconvibus"
                    android:layout_height="@dimen/_70pxv" android:layout_width="match_parent">
                    <FrameLayout android:id="@+id/frameStack"
                        android:layout_gravity="start"
                        android:layout_height="@dimen/_69pxv"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_width="match_parent" style="@style/groupStyleindigo_900cornerRadius">
                        <ImageView android:id="@+id/imageImageEighteen"
                            android:layout_gravity="start"
                            android:layout_height="@dimen/_48pxh"
                            android:layout_marginBottom="@dimen/_10pxv"
                            android:layout_marginEnd="@dimen/_11pxh"
                            android:layout_marginStart="@dimen/_11pxh"
                            android:layout_marginTop="@dimen/_10pxv"
                            android:layout_width="@dimen/_48pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_image18"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_image18"/>
                    </FrameLayout>
                    <TextView android:id="@+id/txtConviBus"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_40pxh"
                        android:layout_marginStart="@dimen/_40pxh"
                        android:layout_width="wrap_content"
                        android:text="@{profileVM.profileModel.txtConviBus}"
                        style="@style/txtInknutAntiquaregular32" tools:text="@string/lbl_convibus"/>
                </FrameLayout>
            </androidx.appcompat.widget.Toolbar>
            <ImageView android:id="@+id/imageImageThirteen"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_84pxh"
                android:layout_marginEnd="@dimen/_37pxh"
                android:layout_marginStart="@dimen/_37pxh"
                android:layout_marginTop="@dimen/_7pxv"
                android:layout_width="@dimen/_84pxh"
                android:scaleType="fitXY"
                imageRes="@{@drawable/img_image13}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_image13"/>
            <LinearLayout android:gravity="center_vertical"
                android:id="@+id/linearRowrakeshsharma"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_37pxh"
                android:layout_marginStart="@dimen/_37pxh"
                android:layout_marginTop="@dimen/_9pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtRakeshSharma"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.89"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{profileVM.profileModel.txtRakeshSharma}"
                    style="@style/txtInika24" tools:text="@string/lbl_rakesh_sharma"/>
                <ImageView android:id="@+id/imageImageSixteen"
                    android:layout_height="@dimen/_22pxh"
                    android:layout_marginBottom="@dimen/_7pxv"
                    android:layout_marginStart="@dimen/_6pxh"
                    android:layout_marginTop="@dimen/_2pxv"
                    android:layout_width="@dimen/_22pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_image16"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_image16"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowupiid"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_31pxh"
                android:layout_marginStart="@dimen/_37pxh"
                android:layout_marginTop="@dimen/_48pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtUPIID"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.26"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{profileVM.profileModel.txtUPIID}"
                    style="@style/txtInika20" tools:text="@string/lbl_upi_id"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtEmail"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_2pxv"
                    android:layout_marginStart="@dimen/_13pxh"
                    android:layout_marginTop="@dimen/_4pxv"
                    android:layout_weight="0.74"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{profileVM.profileModel.txtEmail}"
                    style="@style/txtInriaSerifregular16" tools:text="@string/msg_9284608501185_p"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowcontact"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_38pxh"
                android:layout_marginStart="@dimen/_38pxh"
                android:layout_marginTop="@dimen/_14pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtContact"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.48"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{profileVM.profileModel.txtContact}"
                    style="@style/txtInika20" tools:text="@string/lbl_contact"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtMobileNo"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_6pxv"
                    android:layout_marginStart="@dimen/_6pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.52"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{profileVM.profileModel.txtMobileNo}"
                    style="@style/txtInriaSerifregular16" tools:text="@string/lbl_9284608501"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowaddress"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_37pxh"
                android:layout_marginStart="@dimen/_37pxh"
                android:layout_marginTop="@dimen/_14pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtAddress"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.34"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{profileVM.profileModel.txtAddress}"
                    style="@style/txtInika20" tools:text="@string/lbl_address"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtOStwalEmpire"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_3pxv"
                    android:layout_marginStart="@dimen/_5pxh"
                    android:layout_marginTop="@dimen/_3pxv"
                    android:layout_weight="0.66"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{profileVM.profileModel.txtOStwalEmpire}"
                    style="@style/txtInriaSerifregular16" tools:text="@string/msg_ostwal_empire"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowarival"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_38pxh"
                android:layout_marginStart="@dimen/_38pxh"
                android:layout_marginTop="@dimen/_14pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtArival"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_weight="0.59"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{profileVM.profileModel.txtArival}"
                    style="@style/txtInika20" tools:text="@string/lbl_arival"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtBoisar"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15pxh"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_weight="0.41"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{profileVM.profileModel.txtBoisar}"
                    style="@style/txtInriaSerifregular16" tools:text="@string/lbl_boisar"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowdestination"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_38pxh"
                android:layout_marginStart="@dimen/_38pxh"
                android:layout_marginTop="@dimen/_14pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtDestination"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{profileVM.profileModel.txtDestination}"
                    style="@style/txtInika20" tools:text="@string/lbl_destination"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtVasai"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5pxv"
                    android:layout_marginStart="@dimen/_17pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.25"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{profileVM.profileModel.txtVasai}"
                    style="@style/txtInriaSerifregular16" tools:text="@string/lbl_vasai"/>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnEdit"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_59pxh"
                android:layout_marginStart="@dimen/_59pxh"
                android:layout_marginTop="@dimen/_44pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_12pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_12pxv"
                android:singleLine="true"
                android:text="@string/lbl_edit"
                android:textAllCaps="false"
                style="@style/btnSolidRoundedOutline" tools:text="@string/lbl_edit"/>
        </LinearLayout>
    </FrameLayout>
</layout>
