<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="registerOneVM" type="com.dapp.app.modules.registerone.data.viewmodel.RegisterOneVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearRegisterOne"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <androidx.appcompat.widget.Toolbar android:gravity="start"
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <FrameLayout android:id="@+id/frameStackconvibus"
                android:layout_height="@dimen/_71pxv" android:layout_width="match_parent">
                <FrameLayout android:id="@+id/frameStack"
                    android:layout_gravity="top|start"
                    android:layout_height="@dimen/_68pxv"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:layout_width="match_parent" style="@style/groupStyleindigo_900cornerRadius">
                    <ImageView android:id="@+id/imageImageNineteen"
                        android:layout_gravity="start"
                        android:layout_height="@dimen/_48pxh"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_marginStart="@dimen/_8pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="@dimen/_48pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_image18"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_image18"/>
                </FrameLayout>
                <TextView android:id="@+id/txtConviBus"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_40pxh"
                    android:layout_marginStart="@dimen/_40pxh"
                    android:layout_width="wrap_content"
                    android:text="@{registerOneVM.registerOneModel.txtConviBus}"
                    style="@style/txtInknutAntiquaregular32" tools:text="@string/lbl_convibus"/>
            </FrameLayout>
        </androidx.appcompat.widget.Toolbar>
        <FrameLayout android:id="@+id/frameStackemailidphone"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_309pxv"
            android:layout_marginEnd="@dimen/_32pxh"
            android:layout_marginStart="@dimen/_32pxh"
            android:layout_marginTop="@dimen/_48pxv" android:layout_width="@dimen/_296pxh">
            <LinearLayout android:id="@+id/linearColumnemailidphone"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylewhite_A700cornerRadius">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtEmailIdPhone"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_24pxh"
                    android:layout_marginStart="@dimen/_24pxh"
                    android:layout_marginTop="@dimen/_89pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{registerOneVM.registerOneModel.txtEmailIdPhone}"
                    style="@style/txtInknutAntiquaregular16_1" tools:text="@string/msg_email_id_phone"/>
                <EditText
                    android:background="@android:color/transparent"
                    android:ellipsize="end"
                    android:hint="@string/msg_email_id_or_pho"
                    android:id="@+id/etRectangleTen"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_14pxh"
                    android:layout_marginStart="@dimen/_14pxh"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@={registerOneVM.registerOneModel.etRectangleTenValue}"
                    android:textColorHint="@color/black_900"
                    style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtPassword"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_24pxh"
                    android:layout_marginStart="@dimen/_24pxh"
                    android:layout_marginTop="@dimen/_34pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{registerOneVM.registerOneModel.txtPassword}"
                    style="@style/txtInknutAntiquaregular16_1" tools:text="@string/lbl_password"/>
                <EditText
                    android:background="@android:color/transparent"
                    android:ellipsize="end"
                    android:hint="@string/lbl_password2"
                    android:id="@+id/etRectangleEleven"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_35pxv"
                    android:layout_marginEnd="@dimen/_14pxh"
                    android:layout_marginStart="@dimen/_14pxh"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@={registerOneVM.registerOneModel.etRectangleElevenValue}"
                    android:textColorHint="@color/black_900"
                    style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
            </LinearLayout>
            <TextView android:ellipsize="end" android:id="@+id/txtName"
                android:layout_gravity="top|start"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_marginEnd="@dimen/_33pxh"
                android:layout_marginStart="@dimen/_33pxh"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{registerOneVM.registerOneModel.txtName}"
                style="@style/txtInknutAntiquaregular16_1" tools:text="@string/lbl_name"/>
            <EditText android:background="@android:color/transparent"
                android:ellipsize="end" android:hint="@string/lbl_name2"
                android:id="@+id/etRectangleSeven"
                android:inputType="text"
                android:layout_gravity="top|center"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_41pxv"
                android:layout_marginEnd="@dimen/_14pxh"
                android:layout_marginStart="@dimen/_14pxh"
                android:layout_marginTop="@dimen/_41pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@={registerOneVM.registerOneModel.etRectangleSevenValue}"
                android:textColorHint="@color/black_900"
                style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        </FrameLayout>
        <FrameLayout android:id="@+id/frameStackrectanglenine"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_54pxv"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_32pxh"
            android:layout_marginStart="@dimen/_32pxh"
            android:layout_marginTop="@dimen/_32pxv" android:layout_width="@dimen/_193pxh">
            <View
                android:background="@drawable/rectangle_bg_indigo_900_border_black_900_radius_26"
                android:id="@+id/viewRectangleNine"
                android:layout_gravity="start"
                android:layout_height="@dimen/_52pxv"
                android:layout_marginBottom="@dimen/_2pxv" android:layout_width="@dimen/_193pxh"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtRegister"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_40pxh"
                android:layout_marginStart="@dimen/_40pxh"
                android:layout_marginTop="@dimen/_2pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{registerOneVM.registerOneModel.txtRegister}"
                style="@style/txtInknutAntiquaregular20_1" tools:text="@string/lbl_register"/>
        </FrameLayout>
    </LinearLayout>
</layout>
